<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">理臣网校教师版</string>
    <string name="title_activity_login">Sign in</string>

    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <!-- 加载状态 -->
    <string name="loading_text">数据加载中...</string>
    <string name="loading_data_error_try_again_text">数据加载失败，点击重试</string>
    <string name="loading_data_error_text">数据加载失败</string>

    <!-- 用户 -->
    <string name="prompt_phone">请输入手机号</string>
    <string name="prompt_identifying_code">请输入验证码</string>
    <string name="get_identifying_code">获取验证码</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_confirm_password">确认密码</string>
    <string name="login">登陆</string>
    <string name="forget_password">忘记密码?</string>
    <string name="now_register">立即注册</string>
    <string name="user_register">用户注册</string>
    <string name="user_teaching_time">累计教学时长(h)</string>
    <string name="user_profit">累计收益(¥)</string>
    <string name="user_my_is_teacher">我是班主任</string>
    <string name="user_contact_custom_service">联系客服</string>
    <string name="user_system_notification">系统通知</string>
    <string name="user_student_app_download">学生版下载</string>
    <string name="user_school_area">校区</string>
    <string name="user_about">关于</string>
    <string name="user_setting">设置</string>
    <string name="setting_live_remind">直播提醒</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_recommend_to_friend">推荐给好友</string>
    <string name="setting_check_update">检查更新</string>
    <string name="setting_about">关于</string>

    <!-- 更多 -->
    <string name="more_feedback">建议反馈</string>
    <string name="more_clear_cache">清除缓存</string>
    <string name="more_check_update">检查更新</string>
    <string name="more_custom_service_phone">客服电话</string>
    <string name="more_exit_login">退出当前账号</string>
    <string name="more_exit_login_dialog_content">确定退出当前账号吗?</string>

    <!-- 修改资料 -->
    <string name="user_edit_title">修改资料</string>
    <string name="user_edit_submit">提交</string>
    <string name="user_edit_head">头像</string>
    <string name="user_edit_nick_name">昵称</string>
    <string name="user_edit_sex">性别</string>
    <string name="user_edit_change_password">修改密码</string>
    <string name="user_edit_label">标签</string>
    <string name="user_edit_complete">完成</string>

    <!-- 登录 -->
    <string name="login_title"> 快乐快速学习财务\n教师版</string>
    <string name="login_user_id_not_empty">账号不能为空</string>
    <string name="login_password_not_empty">密码不能为空</string>


    <!-- 修改密码 -->
    <string name="password_edit_prompt_phone">请输入手机号</string>
    <string name="password_edit_prompt_identifying_code">请输入验证码</string>
    <string name="password_edit_prompt_password">设置新密码</string>
    <string name="password_edit_prompt_confirm_password">再次确认密码</string>
    <string name="password_edit_submit">保存修改</string>
    <string name="password_edit_phone_number_format_error">手机号码格式不正确</string>
    <string name="password_edit_identifying_code_not_empty">验证码不能为空</string>
    <string name="password_edit_password_not_empty">密码不能为空</string>
    <string name="password_edit_password_not_equal">两次输入密码不一致</string>
    <string name="password_edit_title_retrieve">找回密码</string>
    <string name="password_edit_title_register">注册</string>
    <string name="password_edit_title_change">修改密码</string>
    <string name="password_edit_submit_register">注册</string>
    <string name="password_edit_submit_change">保存修改</string>
    <string name="password_edit_submit_retrieve">提交</string>

    <!-- 建议反馈 -->
    <string name="feedback_edit_hint">请描述你的问题和建议，衷心感谢您的支持！</string>
    <string name="feedback_submit">提交反馈</string>
    <string name="feedback_content_must_not_empty">反馈内容不能为空</string>
    <string name="feedback_content_uploading">反馈内容提交中...</string>

    <!-- 检查更新 -->
    <string name="downloading_new_version">正在下载新版本</string>
    <string name="downloading_new_version_finish">新版本下载完成</string>
    <string name="downloading_new_version_error">新版本下载失败</string>
    <string name="find_new_version">发现新版本</string>
    <string name="already_is_new_version">已经是最新版本</string>
    <string name="now_update">现在升级</string>
    <string name="next_update">下次再说</string>

    <!-- 首页 -->
    <string name="home_message">审核消息</string>
    <string name="home_check_progress">审核进度</string>
    <string name="home_already_teaching">已上课</string>
    <string name="home_wait_teaching">等待直播</string>
    <string name="home_live_request">直播申请</string>
    <string name="home_live_leave_message">直播留言</string>
    <string name="home_live_leave_record">直播记录</string>
    <string name="home_my_profit">我的收益</string>
    <string name="home_new_leave_message">最新留言</string>
    <string name="home_new_leave_message_empty">没有收到直播留言,先去直播吧!</string>

    <!-- tab -->
    <string name="dock_home">首页</string>
    <string name="dock_chat">交流</string>
    <string name="dock_live">直播</string>
    <string name="dock_more">更多</string>
    <string name="exit_application">再按一次退出程序</string>
    <string name="sure">确定</string>

    <!-- 认证资料 -->
    <string name="auth_title">认证资料</string>
    <string name="auth_name">姓名</string>
    <string name="auth_sex">性别</string>
    <string name="auth_teach_seniority">教龄</string>
    <string name="auth_sex_man">男</string>
    <string name="auth_sex_woman">女</string>
    <string name="auth_age">年龄</string>
    <string name="auth_id_number">身份证号码</string>
    <string name="auth_phone">电话</string>
    <string name="auth_email">邮箱</string>
    <string name="auth_longevity">任职资历</string>
    <string name="auth_education">最高学历</string>
    <string name="auth_major">专业</string>
    <string name="auth_school">院校</string>
    <string name="auth_submit">提交</string>

    <!-- 直播申请 -->
    <string name="live_request_create">创建</string>
    <string name="live_request_title_hint">中文最多15个字</string>
    <string name="live_request_title">标题</string>
    <string name="live_request_type">类型</string>
    <string name="live_request_date">时间</string>
    <string name="live_request_select_date">选择日期</string>
    <string name="live_request_price">价格</string>
    <string name="live_request_price_hint">元</string>
    <string name="live_request_summary">简介</string>
    <string name="live_request_summary_hint">课程介绍、大纲、课程安排</string>
    <string name="live_request_image">课程图片</string>
    <string name="live_request_date_error_hint">直播开始时间不能晚于结束时间</string>

    <!-- 修改申请 -->
    <string name="live_request_edit_title">修改申请</string>

    <!-- 直播详情 -->
    <string name="live_details_title">直播详情</string>

    <!-- 我的收益 -->
    <string name="my_profit_title">我的收益</string>
    <string name="my_profit_withdrawals">提现</string>
    <string name="my_profit_history_bill">历史账单</string>

    <!-- 消息通知 -->
    <string name="message_notice_title">消息通知</string>

    <!-- 我的班级 -->
    <string name="my_class_title">我的班级</string>

    <!-- 创建班级 -->
    <string name="create_class_title">创建班级</string>
    <string name="create_class_name">名称</string>
    <string name="create_class_type">类型</string>
    <string name="create_class_summary">简介</string>
    <string name="create_class_summary_hint">班级性质</string>
    <string name="create_class_image">班级图片</string>

    <!-- 已上课 -->
    <string name="live_already_play_title">已上课</string>

    <!-- 待上课 -->
    <string name="live_wait_play_title">待上课</string>

    <!-- 交流 -->
    <string name="chat_title">交流</string>
    <string name="chat_replay">回复</string>
    <string name="chat_teacher_replay">老师回复:</string>
    <string name="chat_teacher_replay_delete">删除</string>
    <string name="chat_teacher_replay_modify">修改</string>
    <string name="chat_teacher_replay_send">发送</string>
    <string name="chat_all">本场全部</string>
    <string name="chat_not_replay">未回复</string>
    <string name="chat_already_replay">已回复</string>

    <!-- 审核进度 -->
    <string name="live_check_title">审核进度</string>
    <string name="live_check_status_wait">等待审核</string>
    <string name="live_check_not_pass">审核未通过</string>

    <!-- 我的直播 -->
    <string name="live_my_title">我的直播</string>
    <string name="live_my_start">开始直播</string>
    <string name="live_my_not_start">尚未开始</string>
    <string name="live_my_count_down_time">距离直播还有 %s</string>
    <string name="live_my_count_down_date">距离直播还有 %s 天</string>
    <string name="live_my_count_down_doing">直播进行中</string>

    <!-- 历史记录 -->
    <string name="live_record_title">历史记录</string>

    <!-- 我的直播详情 -->
    <string name="live_my_details_share">邀请分享</string>

    <!-- 直播 -->
    <string name="live_chat_title">直播交流</string>
    <string name="live_chat_user_num">当前 %d 人</string>
    <string name="live_join_live_service">正在连接直播服务器...</string>
    <string name="live_join_room">正在加入房间...</string>
    <string name="live_open_live">正在开启直播...</string>
    <string name="live_menu_change_camera">切换镜头</string>
    <string name="live_menu_pause">暂停直播</string>
    <string name="live_menu_resume">继续直播</string>
    <string name="live_menu_finish">结束直播</string>
    <string name="live_publish_pause">直播已暂停</string>
    <string name="live_publish_resume">直播已继续</string>
    <string name="live_finish_dialog_message">确定要结束直播吗?</string>
    <string name="live_pause_dialog_message">退出房间会中断直播，确定退出吗?</string>

    <!-- 直播结束 -->
    <string name="live_finish_go_to_chat">去交流页</string>
    <string name="live_finish_back_to_home">返回首页</string>
    <string name="live_finish_title">本场直播已结束！</string>


</resources>
