<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lichen.teacher.apps.ActivityChangePassword"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/title_bar_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/five_design_view_size">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/color_primary">

            <ImageView
                android:id="@+id/back_view"
                android:layout_width="@dimen/five_design_view_size"
                android:layout_height="match_parent"
                android:src="@drawable/left_arrow_white"
                android:scaleType="centerInside"
                android:background="?android:attr/selectableItemBackground"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/user_edit_change_password"
                android:textSize="@dimen/bigger_text_size"
                android:textColor="@color/color_white"/>

        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/edit_password_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_padding_size"
            android:layout_marginRight="@dimen/view_padding_size"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_confirm_password_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_padding_size"
            android:layout_marginRight="@dimen/view_padding_size"
            android:hint="@string/prompt_confirm_password"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/complete_btn"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/view_padding_size"
        android:layout_marginRight="@dimen/view_padding_size"
        android:layout_marginTop="16dp"
        android:text="@string/user_edit_complete"
        android:textStyle="bold"
        android:textColor="@drawable/hollow_blue_btn_text_selector"
        android:background="@drawable/hollow_blue_btn_selector"/>

</LinearLayout>
